Should fix alignment of visit box
git-svn-id: http://clinicdb.rubyforge.org/svn@131 d096a246-4d2d-4550-b7bf-e545da479d79

--- a/public/stylesheets/visit_box.css
+++ b/public/stylesheets/visit_box.css
@@ -8,8 +8,9 @@
 }
 
 tr.visit_box_top {
-background-color: #ffc;
-border: #aad solid thin;
+	background-color: #ffc;
+	border: #aad solid thin;
+	text-align: left;
 }
 
 td.visit_box_title {
